tests/paczka1/fuzzy1/41165428.err
Error in line 6: YzZLky S992 63,2
Error in line 5: S992 S992 69,4
Error in line 25: S992 A608 76,3
Error in line 30: SyDhOHeU2v A993 23,7
